fixed paragraph gap (#528)

--- a/source/css/_layout/article.styl
+++ b/source/css/_layout/article.styl
@@ -86,8 +86,8 @@
     padding-left: 4px
     padding-right: 4px
   p
-    margin-top: 1rem
-    margin-bottom: 1rem
+    margin-top: $gap-p
+    margin-bottom: $gap-p
     text-align: $textalign-p
     max-width: 100%
     line-height: inherit
